[package]
name = "polyduel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
ggrs = { version = "0.9.3"}
matchbox_socket = {version = "0.5", features = ["ggrs-socket"] }
bytemuck = {version="1.7.3", features= ["derive"]}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
async-executor = "1.4.1"
instant = {version="0.1.12"}