[package]
name = "polyduel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
bevy_ggrs = "0.13"
bevy_matchbox = { version = "0.7", features = ["ggrs"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
bitflags = "2.4.2"
bytemuck = "1.14"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
